src/test/deca/context/valid/test_class/unit_cast_class.deca
// Description:
//    Unit Test Cast
// Results:
//    none
//
// History:
//    Created on 16/01/2025

class A { }
class B extends A { }

{
    (A) (new B());
    (B) (new A());
}
